# SuperEngine

./: .gitignore  .gitmodules  AGENTS.md  AUTHORS.TXT  CMakeLists.txt  README.md  SConscript  SConscript.cocoa  SConscript.gtk  SConscript.test  SConstruct  apt-deps.txt  rename.sh  replace_header_guards.py
src/: CMakeLists.txt  idumper.hpp  repl.cpp  rldbg_main.cpp  rlkp_main.cpp  rlvm.desktop  rlvm_instance.cc  rlvm_instance.cpp  rlvm_instance.h  rlvm_instance.hpp  rlvm_main.cc  rlvm_main.cpp  sgvm_instance.cpp  sgvm_instance.hpp  version.h.in
src/base/: asset_scanner.cc  asset_scanner.cpp  asset_scanner.h  asset_scanner.hpp  audio_data.cc  audio_data.cpp  audio_data.h  audio_data.hpp  audio_player.cc  audio_player.cpp  audio_player.h  audio_player.hpp  audio_table.cc  audio_table.cpp  audio_table.h  avspec.cc  avspec.cpp  avspec.h  avspec.hpp  cgm_table.cc  cgm_table.cpp  cgm_table.h  colour.cpp  compression.cc  compression.cpp  compression.h  compression.hpp  expr_ast.cpp  expr_ast.hpp  gameexe.cpp  gameexe.hpp  grprect.h  grprect.hpp  kidoku_table.cpp  kidoku_table.hpp  localrect.cpp  localrect.hpp  memory.cpp  memory.hpp  memory_bank.hpp  (+23 more)
src/core/: album.cpp  album.hpp  asset_scanner.cpp  asset_scanner.hpp  audio_data.cpp  audio_data.hpp  audio_player.cpp  audio_player.hpp  audio_table.cpp  audio_table.hpp  avspec.cpp  cgm_table.cpp  colour.cpp  colour.hpp  compression.cpp  event.hpp  event_listener.cpp  event_listener.hpp  expr_ast.cpp  expr_ast.hpp  frame_counter.cpp  frame_counter.hpp  gameexe.cpp  gameexe.hpp  grprect.hpp  kidoku_table.cpp  kidoku_table.hpp  localrect.cpp  localrect.hpp  memory.hpp  object.cpp  object.hpp  rect.cpp  rect.hpp  resampler.cpp  resampler.hpp  rlevent_listener.hpp  sound_settings.cpp  tone_curve.cpp  voice_factory.cpp  (+1 more)
src/effects/: blind_effect.cc  blind_effect.cpp  blind_effect.h  blind_effect.hpp  drawer_effect.cc  drawer_effect.cpp  drawer_effect.h  drawer_effect.hpp  effect.cc  effect.cpp  effect.h  effect.hpp  effect_factory.cc  effect_factory.cpp  effect_factory.h  effect_factory.hpp  fade_effect.cc  fade_effect.cpp  fade_effect.h  fade_effect.hpp  scroll_on_scroll_off.cc  scroll_on_scroll_off.h  sel_record.cc  sel_record.cpp  sel_record.h  sel_record.hpp  wipe_effect.cc  wipe_effect.cpp  wipe_effect.h  wipe_effect.hpp
src/encodings/: codepage.cpp  codepage.h  codepage.hpp  cp932.cpp  cp932.h  cp932.hpp  cp936.cpp  cp936.h  cp936.hpp  cp949.cpp  cp949.h  cp949.hpp  encoding.hpp  han2zen.cpp  han2zen.hpp  utf16.cpp  utf16.hpp  western.cpp  western.h  western.hpp
src/interpreter/: parser.cpp  parser.hpp  parsing_error.cpp  parsing_error.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
src/libreallive/: alldefs.h  alldefs.hpp  archive.cc  archive.cpp  archive.h  archive.hpp  bytecode.cc  bytecode.h  bytecode_fwd.hpp  bytecode_table.hpp  compression.cc  compression.h  expression.cc  expression.cpp  expression.h  expression.hpp  expression_fwd.hpp  expression_visitor.cpp  expression_visitor.hpp  filemap.cc  filemap.h  filepos.h  game_loader.cpp  game_loader.hpp  gameexe.cc  gameexe.h  header.cpp  header.hpp  intmemref.cc  intmemref.cpp  intmemref.h  intmemref.hpp  parser.cc  parser.cpp  parser.h  parser.hpp  reallive.h  reallive.hpp  scenario.cc  scenario.cpp  (+13 more)
src/libsiglus/: archive.cpp  archive.hpp  argument_list.cpp  argument_list.hpp  assembler.cpp  assembler.hpp  callable_builder.hpp  cmd.cpp  cmd.hpp  dumper.cpp  dumper.hpp  element.cpp  element.hpp  element_builder.cpp  element_builder.hpp  element_code.cpp  element_code.hpp  element_parser.cpp  element_parser.hpp  function.cpp  function.hpp  gexedat.cpp  gexedat.hpp  ilexeme.hpp  intern_name.hpp  interpreter.cpp  interpreter.hpp  lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  lexfwd.hpp  parser.cpp  parser.hpp  parser_context.cpp  parser_context.hpp  property.hpp  recompiler.cpp  recompiler.hpp  scene.cpp  (+17 more)
src/log/: core.cpp  core.hpp  domain_logger.cpp  domain_logger.hpp  logger.cpp  logger.hpp  tracer.cpp  tracer.hpp
src/long_operations/: button_object_select_long_operation.cc  button_object_select_long_operation.cpp  button_object_select_long_operation.h  button_object_select_long_operation.hpp  load_game_long_operation.cpp  load_game_long_operation.h  load_game_long_operation.hpp  pause_long_operation.cc  pause_long_operation.cpp  pause_long_operation.h  pause_long_operation.hpp  select_long_operation.cc  select_long_operation.cpp  select_long_operation.h  select_long_operation.hpp  textout_long_operation.cpp  textout_long_operation.h  textout_long_operation.hpp  wait_long_operation.cc  wait_long_operation.cpp  wait_long_operation.h  wait_long_operation.hpp  zoom_long_operation.cpp  zoom_long_operation.h  zoom_long_operation.hpp
src/m6/: AGENTS.md  argparse.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  compiler.cpp  compiler.hpp  compiler_pipeline.hpp  disassembler.cpp  disassembler.hpp  error.hpp  error_formatter.cpp  error_formatter.hpp  evaluator.cpp  evaluator.hpp  exception.cpp  exception.hpp  expr_ast.cpp  expr_ast.hpp  line_table.cpp  line_table.hpp  native.hpp  op.cpp  op.hpp  (+24 more)
test/: CMakeLists.txt  SConscript.rlc  SConscript.testdata  animator_unittest.cc  assembler_unittest.cpp  asset_scanner_unittest.cc  asset_scanner_unittest.cpp  audio_databuf_unittest.cc  audio_databuf_unittest.cpp  audio_decode_unittest.cc  audio_decoder_unittest.cc  audio_player_unittest.cc  audio_player_unittest.cpp  audio_table_unittest.cc  audio_table_unittest.cpp  bitstream_unittest.cc  bitstream_unittest.cpp  byte_inserter_unittest.cc  byte_inserter_unittest.cpp  byte_reader_unittest.cc  byte_reader_unittest.cpp  bytestream_unittest.cc  bytestream_unittest.cpp  call_stack_unittest.cpp  cgmtable_unittest.cc  cgmtable_unittest.cpp  codepage_unittest.cpp  default_platformimpl_unittest.cc  drawer_effect_unittest.cc  drawer_effect_unittest.cpp  effect_selrecord_unittest.cc  effect_selrecord_unittest.cpp  effect_test.cc  encodings_unittest.cpp  expected_unittest.cpp  exprast_unittest.cpp  expression_test.cc  flatmap_unittest.cpp  frame_counter_unittest.cpp  g00dec_unittest.cc  (+86 more)
(+1068 files in other folders)
